# kumo

./: .gitignore  Makefile  README.md
.circleci/: config.yml
deploy/kustomize/: kustomization.yaml
deploy/kustomize/sky/: deployment.yaml  kustomization.yaml  service.yaml
deploy/kustomize/vapor/: deployment.yaml  kustomization.yaml  service.yaml
shared/protobuf/: compute.proto
sky/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
sky/grpc/compute/: compute.pb.go
sky/src/: main.rs
sky/src/proto/: compute.rs
sky/templates/: 404.html  base.html  index.html
sky/views/: index.html
sky/views/layouts/: master.html
terraform/: iam.tf  outputs.tf  variables.tf
vapor/: Cargo.toml  Dockerfile  README.md  build.rs
vapor/proto/: compute.proto
vapor/src/: aws.rs  main.rs  protobuf.rs
vapor/src/test/: client.rs
