[package]
name = "vapor"
version = "0.1.0"
authors = ["Darwin D Wu <wuddarwin@gmail.com>"]
edition = "2018"

# For testing purposes
[[bin]]
name = "client"
path = "src/test/client.rs"

[dependencies]
futures = "0.1"
bytes = "0.4"
env_logger = "0.6"
log = "0.4"
http = "0.1"
hyper = "0.12"
prost = "0.5"

# networking
tokio = "0.1"
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-hyper = { git = "https://github.com/tower-rs/tower-hyper" }
tower-service = "0.2"
tower-util = "0.1"
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc.git", default-features = false, features = ["protobuf", "tower-hyper"] }

# AWS
rusoto_core = "0.38"
rusoto_ec2 = "0.38"

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc.git", features = ["tower-hyper"] }
